# xero

./: .gitattributes  .gitignore  Dockerfile  README.md  __init__.py  a.sh  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test.py  train_policy.py
logs/: ac_smoke_metrics.csv  training_metrics.csv
models/: ac_best_smoke.npz  ac_final_smoke.npz  protein_policy.npz  protein_policy_best.npz  protein_policy_final.npz  smoke_policy.npz
server/: __init__.py  app.py  xero_environment.py
